2018-01-08  Florian Weimer  <fweimer@redhat.com>

	* nptl/tst-thread-exit-clobber.cc: New file.
	* nptl/Makefile (CFLAGS-tst-thread-exit-clobber.o): Compile in
	C++11 mode.
	(LDLIBS-tst-thread-exit-clobber): Link with libstdc++.
	(tests): Add tst-thread-exit-clobber.
	[!CXX] (tests-unsupported): Add tst-thread-exit-clobber.

2018-01-12  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22679]
	CVE-2018-1000001
	* sysdeps/unix/sysv/linux/getcwd.c (__getcwd): Fall back to
	generic_getcwd if the path returned by getcwd syscall is not absolute.
	* io/tst-getcwd-abspath.c: New test.
	* io/Makefile (tests): Add tst-getcwd-abspath.

2017-12-19  Adhemerval Zanella  <adhemerval.zanella@linaro.org>
	    James Clarke <jrtc27@jrtc27.com>

	[BZ #22603]
	* sysdeps/ia64/memchr.S (__memchr): Avoid overflow in pointer
	addition.

2018-01-08  Dmitry V. Levin  <ldv@altlinux.org>

	* sysdeps/unix/sysv/linux/tst-ttyname.c (do_in_chroot_1): Skip the
	test instead of failing in case of ENOENT returned by posix_openpt.

2017-12-29  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #22611]
	* malloc/tst-realloc.c (do_test): Remove the test checking that errno
	is unchanged on success.

2017-12-30  Aurelien Jarno  <aurelien@aurel32.net>
	    Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22625]
	CVE-2017-16997
	* elf/dl-load.c (fillin_rpath): Check for empty tokens before dynamic
	string token expansion. Check for NULL pointer or empty string possibly
	returned by expand_dynamic_string_token.
	(decompose_rpath): Check for empty path after dynamic string
	token expansion.

2017-12-18  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22627]
	* elf/dl-load.c (_dl_init_paths): Remove _dl_dst_substitute preparatory
	code and invocation.

2017-11-18  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/tst-ttyname.c
	(become_root_in_mount_ns): Remove.
	(do_in_chroot_1): Call support_enter_mount_namespace.
	(do_in_chroot_2): Likewise.
	(do_test): Call support_become_root early.
